# pyiosbackup

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
pyiosbackup/: __init__.py  __main__.py  backup.py  entry.py  exceptions.py  keybag.py  manifest_plist.py
pyiosbackup/manifest_dbs/: factory.py  manifest_db_interface.py  mbdb.py  sqlite3.py
tests/: conftest.py  test_backup.py  test_keybag.py
