[project]
name = "pyiosbackup"
version = "0.2.3"
description = "A python parser for iOS backups"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["ios", "backup", "automation"]
authors = [
    { name = "Matan Perelman", email = "matan1008@gmail.com" }
]
maintainers = [
    { name = "Matan Perelman", email = "matan1008@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/matan1008/pyiosbackup"
"Bug Reports" = "https://github.com/matan1008/pyiosbackup/issues"

[project.scripts]
pyiosbackup = "pyiosbackup.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"